# arbor

./: '  .clang-tidy  .codecov.yml  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .ycm_extra_conf.py  .zenodo.json  ATTRIBUTIONS.md  CHANGELOG.md  CITATION.bib  CMakeGraphVizOptions.cmake  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST  MANIFEST.in  README.md  TODO.md  VERSION  asc-todo.md  benchmark.sh  cell_tree.hpp  commit.msg  compile.sh  compile_commands.json  main.cpp  make_image.sh  makefile  meson.build  meson.todo  meson_options.txt  notes.md  (+17 more)
ancillary/: CMakeLists.txt  glob.cpp  ioutil.cpp  json_meter.cpp  path.cpp  spike_emitter.cpp
arbor/: CMakeLists.txt  adex_cell_group.cpp  adex_cell_group.hpp  affinity.hpp  algorithms.hpp  arbexcept.cpp  assert.cpp  benchmark_cell_group.cpp  benchmark_cell_group.hpp  builtin_mechanisms.cpp  builtin_mechanisms.hpp  cable_cell.cpp  cable_cell_group.cpp  cable_cell_group.hpp  cable_cell_param.cpp  cell.cpp  cell.hpp  cell_group.hpp  cell_group_factory.cpp  cell_group_factory.hpp  common_types.hpp  common_types_io.cpp  compartment.hpp  connection.hpp  cv_policy.cpp  cv_policy_parse.cpp  distributed_context.hpp  domain_decomposition.cpp  domain_decomposition.hpp  domain_info.cpp  domdecexcept.cpp  epoch.hpp  event_binner.cpp  event_binner.hpp  event_generator.hpp  event_lane.hpp  event_map.hpp  event_queue.hpp  execution_context.cpp  execution_context.hpp  (+71 more)
arbor/backends/: builtin_mech_proto.hpp  common_types.hpp  event.hpp  event_delivery.md  event_stream.hpp  event_stream_base.hpp  event_stream_state.hpp  fvm_types.hpp  integration_result.hpp  multi_event_stream.hpp  multi_event_stream_state.hpp  rand.hpp  rand.inc  rand_fwd.hpp  rand_impl.hpp  shared_state_base.hpp  threshold_crossing.hpp
arbor/communication/: communicator.cpp  communicator.hpp  distributed_context.hpp  (+11 more)
arborenv/: CMakeLists.txt  affinity.cpp  arbenvexcept.cpp  concurrency.cpp  cuda_api.hpp  default_env.cpp  default_gpu.cpp  gpu_api.hpp  gpu_uuid.cpp  gpu_uuid.hpp  hip_api.hpp  meson.build  private_gpu.cpp  read_envvar.cpp  read_envvar.hpp
arborio/: CMakeLists.txt  arbornml.cpp  asc_lexer.cpp  asc_lexer.hpp  cable_cell_format.cpp  cable_cell_format.hpp  cableio.cpp  cableio_error.cpp  cv_policy_parse.cpp  debug.cpp  jsonio.cpp  label_parse.cpp  meson.build  networkio.cpp  neurolucida.cpp  neuroml.cpp  nml_parse_morphology.cpp  nml_parse_morphology.hpp  nmlexcept.cpp  parse_expression.hpp  parse_helpers.hpp  parse_morphology.cpp  parse_morphology.hpp  parse_s_expr.hpp  swcio.cpp  with_xml.cpp  xml.cpp  xml.hpp  xmlwrap.cpp  xmlwrap.hpp
arbornml/: CMakeLists.txt  arbornml.cpp  nmlexcept.cpp  parse_morphology.cpp  parse_morphology.hpp  with_xml.cpp  xmlwrap.cpp  xmlwrap.hpp
aux/: CMakeLists.txt  glob.cpp  ioutil.cpp  json_meter.cpp  json_meter.hpp  path.cpp  spike_emitter.cpp  tinyopt.hpp  with_mpi.hpp
cub_test/: CMakeLists.txt  managed_ptr.hpp  test.cu  test.cu.back
doc/: .gitignore  CMakeLists.txt  Rasterplot  ai_library.rst  cable_cell.rst  cable_cell2.rst  cell_injection.rst  cell_models.rst  co_cable_cell.rst  co_cell.rst  co_domdec.rst  co_hardware.rst  co_interconnectivity.rst  co_labels.rst  co_mechanisms.rst  co_morphology.rst  co_network_components.rst  co_overview.rst  co_recipe.rst  co_synapses.rst  conf.py  cpp_cable_cell.rst  cpp_cell.rst  cpp_common.rst  cpp_distributed_context.rst  cpp_domdec.rst  cpp_dry_run.rst  cpp_hardware.rst  cpp_intro.rst  cpp_model.rst  cpp_neuroml.rst  cpp_overview.rst  cpp_profiler.rst  cpp_recipe.rst  cpp_simulation.rst  cpp_synapses.rst  dependencies.csv  dss_cell.rst  gs_build_install.rst  gs_install.rst  (+55 more)
docs/: .gitignore  CMakeLists.txt  SelfArx.cls  appendix.tex  bibliography.bib  conf.py  formulation.tex  install.rst  introduction.rst  library.rst  makefile  report.bbl  report.blg  report.tex  symbols.tex
example/: CMakeLists.txt  meson.build  readme.md
ext/: CMakeLists.txt
include/: CMakeLists.txt  git-source-id
lmorpho/: CMakeLists.txt  README.md  lmorpho.cpp  lsys_models.cpp  lsys_models.h  lsys_models.hpp  lsystem.cpp  lsystem.h  lsystem.hpp  meson.build  morphio.cpp  morphio.hpp  morphology.cpp  morphology.h  morphology.hpp  quaternion.hpp
mechanisms/: BuildModules.cmake  CMakeLists.txt  generate.sh  generate_catalogue  generate_default_catalogue  meson.build  meson.build.in
miniapp/: CMakeLists.txt  README.md  io.cpp  io.hpp  miniapp.cpp  miniapp.cu  miniapp.hpp  miniapp_recipes.cpp  miniapp_recipes.hpp  model.cpp  model.hpp  morphology_pool.cpp  morphology_pool.hpp  recipes.cpp  recipes.hpp  simple_recipes.hpp  trace.cpp  trace.hpp  trace_sampler.cpp  trace_sampler.hpp
modcc/: CMakeLists.txt  astmanip.cpp  astmanip.hpp  blocks.cpp  blocks.hpp  cexpr_emit.cpp  cexpr_emit.hpp  cexpr_render.cpp  cexpr_render.hpp  constantfolder.hpp  cprinter.cpp  cprinter.hpp  cprinter2.cpp  cprinter2.hpp  cudaprinter.cpp  cudaprinter.hpp  debug-CMakeLists.txt  error.hpp  errorvisitor.cpp  errorvisitor.hpp  expression.cpp  expression.hpp  expressionclassifier.cpp  functionexpander.cpp  functionexpander.hpp  functioninliner.cpp  functioninliner.hpp  identifier.hpp  kineticrewriter.cpp  kineticrewriter.hpp  kinrewriter.cpp  kinrewriter.hpp  lexer.cpp  lexer.hpp  linearrewriter.cpp  linearrewriter.hpp  location.hpp  mechanism.hpp  memop.hpp  meson.build  (+28 more)
modparser/: CMakeLists.txt  LICENSE  README.md  install_manifest.txt
python/: CMakeLists.txt  __init__.py  __init__.pyi  __main__.py  arb.cpp  cable_cell_io.cpp  cable_probes.cpp  cell-todo.md  cells.back.cpp  cells.cpp  cells.hpp  config.cpp  config.hpp  context.cpp  context.hpp  conversion.hpp  domain_decomposition.cpp  env.cpp  env.pyi  error.cpp  error.hpp  event_generator.cpp  event_generator.hpp  exception.cpp  exception.hpp  flat_cell_builder.cpp  identifiers.cpp  json_params.hpp  label_dict.cpp  label_dict.hpp  mechanism.cpp  meson.build  mini.py  modcc.py  morph_parse.cpp  morph_parse.hpp  morpho_test.py  morphology.cpp  mpi.cpp  mpi.hpp  (+32 more)
(+2948 files in other folders)
